[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/GFX/wood/horizontal/wood5_horizontal.png" type="Texture" id=1]
[ext_resource path="res://Assets/GFX/wood/horizontal/wood1_horizontal.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Utils/Navigation.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Levels/TemplateLevel/TemplateLevel.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Utils/TowerPlacement/TowerPlacement.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Utils/Goal.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Utils/EnemySpawns/EnemySpawns.tscn" type="PackedScene" id=8]

[sub_resource type="TileSet" id=1]
0/name = "LightWood"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 512, 512 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "wood1_horizontal.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 512, 512 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "LightWood - Trim"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 512, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[node name="TemplateLevel" type="Node2D"]
script = ExtResource( 4 )
health = 10
is_initially_spawning = false

[node name="BackgroundTileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 512, 512 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0 )

[node name="Navigation" parent="." instance=ExtResource( 3 )]
visible = false
goal = NodePath("../Goal")

[node name="EnemySpawns" parent="." instance=ExtResource( 8 )]

[node name="TowerPlacement" parent="." instance=ExtResource( 6 )]
visible = false

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="HUD"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -256.0

[node name="ColorRect" type="ColorRect" parent="HUD/HBoxContainer"]
margin_right = 200.0
margin_bottom = 256.0
rect_min_size = Vector2( 200, 200 )
size_flags_vertical = 3

[node name="ColorRect2" type="ColorRect" parent="HUD/HBoxContainer"]
margin_left = 204.0
margin_right = 1332.0
margin_bottom = 256.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 3

[node name="ColorRect3" type="ColorRect" parent="HUD/HBoxContainer"]
margin_left = 1336.0
margin_right = 1536.0
margin_bottom = 256.0
rect_min_size = Vector2( 200, 200 )

[node name="ColorRect4" type="ReferenceRect" parent="HUD"]
visible = false
rect_min_size = Vector2( 910, 582 )
rect_scale = Vector2( 1.68863, 1.32257 )
size_flags_vertical = 3
border_width = 1.4
editor_only = false

[node name="Debug" type="Control" parent="HUD"]
margin_left = 661.0
margin_top = 841.0
margin_right = 740.0
margin_bottom = 905.0

[node name="PlacementModeButton" type="CheckButton" parent="HUD/Debug"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -128.0
margin_right = 94.0
margin_bottom = 128.0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Placement Mode"

[node name="SpawnEnemyButton" type="Button" parent="HUD/Debug"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -214.0
margin_top = -10.0
margin_right = -115.0
margin_bottom = 10.0
text = "Spawn Enemy"

[node name="TowerOptionButton" type="OptionButton" parent="HUD/Debug"]
margin_left = 225.0
margin_top = 24.0
margin_right = 326.0
margin_bottom = 44.0
text = "Tower Type"

[node name="Towers" type="Node" parent="."]

[node name="Enemies" type="Node" parent="."]

[node name="Goal" parent="." instance=ExtResource( 7 )]
position = Vector2( 128, 416 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 17.0
margin_top = 410.0
margin_right = 107.0
margin_bottom = 424.0
text = "HP: 10"
align = 1

[connection signal="spawn_enemy" from="EnemySpawns" to="." method="spawn_enemy"]
[connection signal="check_tower_position" from="TowerPlacement" to="." method="_on_TowerPlacement_check_tower_position"]
[connection signal="place_tower" from="TowerPlacement" to="." method="place_tower"]
[connection signal="toggled" from="HUD/Debug/PlacementModeButton" to="." method="_on_PlacementModeButton_toggled"]
[connection signal="pressed" from="HUD/Debug/SpawnEnemyButton" to="." method="_on_SpawnEnemyButton_pressed"]
[connection signal="item_selected" from="HUD/Debug/TowerOptionButton" to="." method="_on_TowerOptionButton_item_selected"]
